# rust-weekly-lib

./: README.md
etcd/: Cargo.toml
etcd/src/: main.rs  readme.md
jwt/: Cargo.toml
jwt/src/: error.rs  main.rs  readme.md
redis-rs/: Cargo.toml
redis-rs/src/: main.rs  readme.md
serde-rs/: Cargo.toml
serde-rs/src/: main.rs  readme.md
sqlx/sqlx-example/: .env  Cargo.toml
sqlx/sqlx-example/migrations/: 20231203144853_test.sql
sqlx/sqlx-example/src/: main.rs
thiserror/error1/src/: main.rs
thiserror/error2/src/: main.rs
thiserror/error3/: Cargo.toml
thiserror/error3/src/: main.rs
tokio/tcp-echo-client/src/: main.rs
tokio/tcp/tcp-echo-client/: Cargo.toml
tokio/tcp/tcp-echo-server/: Cargo.toml
tokio/tcp/tcp-echo-server/src/: main.rs
tokio/web/axum-example/: Cargo.toml
tokio/web/axum-example/src/: main.rs
