[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-web-httpauth = "0.8.2"
chrono = "0.4.38"
derive_more = "0.99.18"
jsonwebtoken = "9.3.0"
serde = "1.0.204"
serde_json = "1.0.121"
tokio = "1.39.2"
